# grpc_webnext

./: .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  PROTOCOL.md  README.md
clients/typescript/: package-lock.json  package.json  tsconfig.json
clients/typescript/examples/: greeter.ts
clients/typescript/src/: call.ts  client.ts  fetch-transport.ts  frame.test.ts  frame.ts  index.ts  promise.ts  service.ts  status.ts  ws-transport.ts
clients/typescript/test/: e2e.test.ts  json.test.ts  promise.test.ts  ws-close-status.test.ts
conformance/: README.md
conformance/cases/: deadline.yaml  limits.yaml  streaming.yaml  unary.yaml
conformance/proto/: conformance.proto
conformance/schema/: case.schema.json
crates/core/: Cargo.toml  build.rs
crates/core/src/: fetch.rs  grpc_framing.rs  httprule.rs  json_frame.rs  lib.rs  metadata.rs  transcode.rs
crates/devserver/: Cargo.toml
crates/devserver/src/: main.rs
crates/grpc-webnext/: Cargo.toml  build.rs
crates/grpc-webnext/src/: backend.rs  fetch.rs  frame.rs  framing.rs  lib.rs  reflect.rs  schema.rs  ws.rs
crates/grpc-webnext/tests/: inproc_auth.rs  inproc_cancel.rs  inproc_json.rs  inproc_streaming.rs  inproc_unary.rs  proxy_cancel.rs  proxy_deadline.rs  proxy_json.rs  proxy_keepalive.rs  proxy_passthrough.rs  proxy_streaming.rs  proxy_unary.rs
crates/proxy/: Cargo.toml  build.rs
crates/proxy/proto/: reflection_v1alpha.proto
crates/proxy/src/: lib.rs  main.rs  metadata.rs  reflect.rs  schema.rs  ws.rs
crates/proxy/tests/: cancel.rs  deadline.rs  json.rs  keepalive.rs  passthrough.rs  retry.rs  streaming.rs  unary.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  ws.rs
crates/server/tests/: auth.rs  cancel.rs  json.rs  keepalive.rs  streaming.rs  unary.rs
crates/testecho/: build.rs
crates/testecho/proto/: echo.proto  reflection_v1.proto
crates/testecho/proto/google/api/: annotations.proto  http.proto
crates/testecho/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
doc/: BACKLOG.md  H2TS_INTEGRATION.md  PROTOCOL.md  STATUS.md  UNIFICATION.md
examples/: README.md  greeter.proto
examples/greeter-server/: Cargo.toml  build.rs
examples/greeter-server/src/: main.rs
go/: README.md  go.mod
go/examples/greeter/: main.go
go/webnext/: backend.go  config.go  doc.go  frame.go  server.go  status.go
node/: README.md  package-lock.json  package.json
proto/: grpc_webnext.proto
rust/: Cargo.toml
rust/crates/devserver/: Cargo.toml
rust/crates/devserver/src/: main.rs
rust/crates/grpc-webnext/: Cargo.toml  README.md  build.rs
rust/crates/grpc-webnext/src/: codec.rs  fetch.rs  framing.rs  grpc_framing.rs  h2ts.rs  httprule.rs  json_frame.rs  lib.rs  metadata.rs  ws.rs
rust/crates/grpc-webnext/tests/: framing_unit.rs  grpc_framing_unit.rs  inproc_auth.rs  inproc_cancel.rs  inproc_json.rs  inproc_keepalive.rs  inproc_streaming.rs  inproc_unary.rs  inproc_ws_close.rs  metadata_unit.rs  proxy_cancel.rs  proxy_deadline.rs  proxy_json.rs  proxy_streaming.rs  vendored_proto.rs
rust/crates/testecho/: Cargo.toml
rust/crates/testecho/src/: lib.rs
rust/examples/: README.md  greeter.proto
rust/examples/conformance-server/: Cargo.toml  build.rs
rust/examples/conformance-server/src/: main.rs
rust/examples/greeter-server/: build.rs
spec/: COMPATIBILITY.md  PROTOCOL.md
