[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/proxy",
    "crates/server",
    "crates/testecho",
    "crates/devserver",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/grpc-webnext/grpc-webnext"

[workspace.dependencies]
grpc-webnext-core = { path = "crates/core" }
