[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/grpc-webnext",
    "crates/testecho",
    "crates/devserver",
    "examples/greeter-server",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/grpc-webnext/grpc-webnext"

[workspace.dependencies]
grpc-webnext-core = { path = "crates/core" }
grpc-webnext = { path = "crates/grpc-webnext" }
