[workspace]
resolver = "2"
members = [
    "crates/grpc-webnext",
    "crates/testecho",
    "crates/devserver",
    "examples/greeter-server",
    "examples/conformance-server",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/grpc-webnext/grpc-webnext"

[workspace.dependencies]
grpc-webnext = { path = "crates/grpc-webnext" }
