[package]
name = "grpc-webnext-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native grpc-webnext server: serve grpc-webnext and native gRPC on one port, backed by a tonic Router."

[dependencies]
grpc-webnext-core.workspace = true
tonic = "0.14"
tower = "0.5"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-tungstenite = "0.20"
bytes = "1"
async-stream = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"

[dev-dependencies]
testecho = { path = "../testecho" }
grpc-webnext-core = { path = "../core" }
reqwest = { version = "0.13", default-features = false, features = ["http2"] }
tokio-tungstenite = "0.29"
prost = "0.14"
serde_json = "1.0.150"
