[package]
name = "grpc-webnext-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared WebSocket/Fetch transport glue for the grpc-webnext server and proxy."

[dependencies]
grpc-webnext-core.workspace = true
hyper-tungstenite = "0.20.0"
tokio = { version = "1", features = ["time"] }
