[package]
name = "grpc-webnext"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "grpc-webnext: serve grpc-webnext (Fetch + WebSocket) over any gRPC service — in-process (wrap a tonic Router) or as a standalone binary proxy in front of an upstream."

[lib]
name = "grpc_webnext"
path = "src/lib.rs"

[[bin]]
name = "grpc-webnext-proxy"
path = "src/bin/proxy.rs"

[dependencies]
tonic = "0.14.6"
tonic-prost = "0.14.6"
tower = "0.5"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-tungstenite = "0.20"
bytes = "1"
async-stream = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
prost = "0.14"
prost-types = "0.14"
prost-reflect = { version = "0.16.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-prost-build = "0.14"
prost-build = "0.14"

[dev-dependencies]
testecho = { path = "../testecho" }
reqwest = { version = "0.13", default-features = false, features = ["http2"] }
tokio-tungstenite = "0.29"
