[package]
name = "grpc-webnext"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Full bidirectional gRPC for the browser — real HTTP/2 over WebSockets (h2ts), plus JSON, REST, and a single-stream Frame protocol — served in front of any gRPC service, in-process (wrap a tonic Router) or as a standalone proxy."
readme = "README.md"
keywords = ["grpc", "grpc-web", "http2", "websocket", "proxy"]
categories = ["network-programming", "web-programming::http-server", "web-programming::websocket"]
# The integration tests are dev-only: they depend on the in-workspace `testecho` crate (a path
# dev-dependency cargo strips on publish), so they can't compile from a crates.io download. Keep
# them out of the package rather than ship tests that don't build.
exclude = ["tests/"]

[lib]
name = "grpc_webnext"
path = "src/lib.rs"

[[bin]]
name = "grpc-webnext-proxy"
path = "src/bin/proxy.rs"

[dependencies]
tonic = "0.14.6"
tonic-prost = "0.14.6"
tower = "0.5"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-tungstenite = "0.20"
h2ts-server = "0.1.1"
bytes = "1"
async-stream = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
prost = "0.14"
prost-types = "0.14"
prost-reflect = { version = "0.16.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-prost-build = "0.14"
prost-build = "0.14"

[dev-dependencies]
testecho = { path = "../testecho" }
reqwest = { version = "0.13", default-features = false, features = ["http2"] }
tokio-tungstenite = "0.29"
