[package]
name = "testecho"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Test-only tonic Echo server/client for grpc-webnext integration tests."

[dependencies]
tonic = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
async-stream = "0.3"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
