[package]
name = "conformance-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "grpc-webnext conformance server: serves grpc.webnext.conformance.v1.ConformanceService over grpc-webnext for the language-neutral conformance driver."

[dependencies]
grpc-webnext = { path = "../../crates/grpc-webnext" }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
http = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures = "0.3"

[build-dependencies]
tonic-prost-build = "0.14"
